src/ui/radarr_ui/library/snapshots/managarr__ui__radarr_ui__library__edit_movie_ui__edit_movie_ui_tests__tests__snapshot_tests__EditMoviePrompt_FileInfo.snap
---
source: src/ui/radarr_ui/library/edit_movie_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                    ╭  Movie Info  ────────────────────────────────────────────────────────────────────────────────────────────────────────────╮                     
                    │ Details │ History │ File │ Cast │ Crew │ Manual Search                                                                   │                     
                    │──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│                     
                    │File Details                                                                                                              │                     
                    │Some file in╭─────────────────────────────────────────  Edit - Test  ─────────────────────────────────────────╮           │                     
                    │            │                                         Blah blah blah                                          │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │────────────│                                                                                                 │───────────│                     
                    │Audio Detail│                                                                                                 │           │                     
                    │Some audio i│                                                                                                 │           │                     
                    │            │                                               ╭───╮                                             │           │                     
                    │            │                                    Monitored: │ ✔ │                                             │           │                     
                    │            │                                               ╰───╯                                             │           │                     
                    │            │                                               ╭────────────────────────────────────────────╮    │           │                     
                    │────────────│                         Minimum Availability: │Announced                                 ▼ │    │───────────│                     
                    │Video Detail│                                               ╰────────────────────────────────────────────╯    │           │                     
                    │Some video i│                                               ╭────────────────────────────────────────────╮    │           │                     
                    │            │                              Quality Profile: │HD - 1080p                                ▼ │    │           │                     
                    │            │                                               ╰────────────────────────────────────────────╯    │           │                     
                    │            │                                               ╭────────────────────────────────────────────╮    │           │                     
                    │            │                                         Path: │/nfs/movies                                 │    │           │                     
                    │            │                                               ╰────────────────────────────────────────────╯    │           │                     
                    │            │                                               ╭────────────────────────────────────────────╮    │           │                     
                    │            │                                         Tags: │alex                                        │    │           │                     
                    │            │                                               ╰────────────────────────────────────────────╯    │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │╭───────────────────────────────────────────────╮╭──────────────────────────────────────────────╮│           │                     
                    │            ││                     Save                      ││                    Cancel                    ││           │                     
                    │            │╰───────────────────────────────────────────────╯╰──────────────────────────────────────────────╯│           │                     
                    │            ╰─────────────────────────────────────────────────────────────────────────────────────────────────╯           │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
